--- a/web_app/index.html
+++ b/web_app/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <h1>Nynorsk Rimordbok</h1>
+  <a href="/"><img src="img/logo.png"><h1>Nynorsk Rimordbok</h1></a>
   <div id="data-wrapper" v-cloak>
     <h2>Skriv inn eit ord</h2>
   <form v-on:submit.prevent="requestRhymes()">
