--- a/web_app/index.html
+++ b/web_app/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-  <a href="/"><img src="img/logo.png"><h1>Nynorsk Rimordbok</h1></a>
+  <a href="/"><img src="img/logo.png"><h1>Nynorsk<br>Rimordbok</h1></a>
   <div id="data-wrapper" v-cloak>
-    <h2>Skriv inn eit ord</h2>
+
   <form v-on:submit.prevent="requestRhymes()">
     <input
         type="text"
@@ -24,6 +24,7 @@
         id="search"
         required
     ><button type="submit" :disabled="loading">Finn rimord</button>
+    <span v-if="loading"><img src="/img/ajax-loader.gif" alt=""></span>
   </form>
   <p v-if="loading">Leiter etter rimord...</p>
 
