Integrate with Google Analytics

--- a/web_app/index.html
+++ b/web_app/index.html
@@ -6,6 +6,15 @@
   <title>Nynorsk Rimordbok</title>
   <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
 
+  <!-- Google Analytics -->
+  <script>
+    window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+    ga('create', 'UA-144018055-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <script async src='https://www.google-analytics.com/analytics.js'></script>
+  <!-- End Google Analytics -->
+
   <script src="lib/vue.js/vue.js"></script>
   <script src="lib/axios/axios.min.js"></script>
 
