--- a/web_app/index.html
+++ b/web_app/index.html
@@ -15,17 +15,16 @@
   <script async src='https://www.google-analytics.com/analytics.js'></script>
   <!-- End Google Analytics -->
 
-  <script src="lib/vue.js/vue.js"></script>
-  <script src="lib/axios/axios.min.js"></script>
+  <script type='application/javascript' src="lib/vue.js/vue.js"></script>
+  <script type='application/javascript' src="lib/axios/axios.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
-<header>
-  <a href="/"><img class="logo" src="img/logo.png">
-    <h1>Nynorsk<br>Rimordbok</h1></a>
-</header>
+  <div id="header">
+    <nrheader></nrheader>
+  </div>
 <div id="data-wrapper" v-cloak>
 
   <form v-on:submit.prevent="requestRhymes()">
@@ -53,12 +52,8 @@
   </ul>
 </div>
 
-<footer>
-  <img class="logo" src="img/logo.png"><h4>Nynorsk Rimordbok</h4>
-  <ul>
-    <li><a href="page/about.html">Om Nynorsk Rimordbok</a></li>
-    <li><a href="https://arustories.com" target="_blank">arustories.com</a></li>
-  </ul>
+<footer id="footer">
+  <nrfooter></nrfooter>
 </footer>
 
 <script src="js/utils.js"></script>
