Autoselect text in search field on focus close #33

--- a/web_app/index.html
+++ b/web_app/index.html
@@ -29,6 +29,7 @@
 
   <form v-on:submit.prevent="requestRhymes()">
     <input
+      @click="select()"
       type="text"
       v-model="text"
       id="search"
